# mikudos-rust-app

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  test.rs
src/greeter/: greeter.rs  greeter_grpc.rs
src/my_mod/: collection.rs  mod.rs  test1.rs  traits.rs
