[package]
name = "mikudos-rust-app"
version = "0.1.0"
authors = ["guanyu <yue.guanyu@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = { version = "0.5", default-features = false, features = ["protobuf-codec"] }
rand = "0.7.0"
